All smaller new images added

--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ html {
 
 @font-face {
     font-family: logofont;
-    src: url('../code/Germanika\ Personal\ Use.ttf');
+    src: url('../code/Germanika-Personal-Use.ttf');
 }
 
 h1 {
@@ -99,14 +99,12 @@ label::after {
 /************************************* BIG NEWS SECTION *****************************************/
 
 .big-news {
-    background: rgb(165, 157, 161);
+    background: rgb(192, 176, 183);
     padding: 30px 5px 30px 5px;
     margin: 25px 25px 25px 25px;
 }
 
-.main-picture {
-    padding: 20px;
-}
+.main-picture {}
 
 .big-news img {
     width: 520px;
