--- a/code/style.css
+++ b/code/style.css
@@ -1,24 +1,35 @@
-body {
+* {
+  box-sizing: border-box;
+  }
+
+.body {
   background:linear-gradient(#cbf7f7, #2d73d4, #020f3f, #020f3f,black, black, black);
-  color:white;
-  font-family: Arial, Helvetica, sans-serif;
+  color:rgb(226, 230, 231);
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.07rem;
   margin: 0;
   min-height: 3000px;
 }
 
 /*** HEADER ***/
 
+
 header {
-  background: none;
-  height: 90px;
   display: flex;
+  background: none;
   align-items: center;
+  justify-content: space-between;
   padding: 10px 30px 10px 10px;
+  height: 90px;
   max-width: 1100px;
 }
 
 header h1 {
-color: black;
+  color: black;
+  letter-spacing: 0.3rem;
+  font-size: 25px;
+  margin-left: 5px;
 }
 
 .logo {
@@ -29,10 +40,10 @@ color: black;
 
 .hamburger {
   display: flex;
-  width: 30px;
-  height: 30px;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 30px;
+  height: 30px;
   
 }
 
@@ -68,46 +79,75 @@ nav a:hover{
 .big-news-container {
 display: flex;
 flex-direction: column;
-width: 100%;
 max-width: 1100px;
 margin: 10px 0 10px 10px;
-align-items: center;
+}
+
+.h2 {
+  font-size: 25px;
+  letter-spacing: 0.1rem;
 }
 
 .big-news-container img {
   width: 100%;
+  align-self: center;
 }
+  
 
-.big-news-container div {
-  text-align: center;
+.news-text {
+  width: 100%;
+  max-width: 500px;
+  text-align: left;
+  padding: 10px;
+}
+.blubb-on-mobile {
+  text-align: left;
+}
+.blubb {
+  display: none;
+  text-align: left;
 }
 
 /***Four News Container***/
 
 .four-news-container {
   display: flex;
-  width: 100%;
   flex-direction: column;
+  width: 100%;
   max-width: 1100px;
   justify-content: space-between;
   align-items: center;
   margin: 10px;
+  margin-right: 10px;
 }
 .four-news-container img{
   width: 100%;
   cursor: pointer;
 }
+.four-image {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 
 .four-news-container img:hover{
   box-shadow: 5px 5px 3px 2px rgb(15, 71, 155);
 }
+
+/* grid */
+
 /*** Media Queries ***/
 
+/* Tablet*/
 @media (min-width: 735px) 
 { 
   header {
     justify-content: space-between;
   }
+  
+  header h1 {
+  font-size: 30px;
+  }
+
   nav {
     display: inline-block;
   }
@@ -128,17 +168,28 @@ align-items: center;
   .big-news-container img{
     width: 50%;
   }
+  
+  .blubb {
+    display: contents;
+  }
+
+  .blubb-on-mobile{
+    display: none;
+  }
+
   .four-news-container {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     max-width: 100%;
-    flex-wrap: wrap;
+    
   }
 
   .four-news-container img {
   width: 23rem;
   }
 
+  /*Small desktop*/
 @media (min-width: 900px) {
   .big-news-container {
     flex-direction: row;
@@ -147,13 +198,21 @@ align-items: center;
 
   .big-news-container img {
     width: 50%;
+    text-align: left;
+  }
+
+  .news-text{
+    width: 50%;
+  }
+  .blubb-on-mobile{
+    display: none;
   }
 
   .four-news-container {
     display: flex;
     justify-content: space-between;
-    max-width: 1100px;
     align-items: center;
+    max-width: 1100px;
     margin: 10px;
   }
 
