succeded in placing header elements with grid areas

--- a/code/style.css
+++ b/code/style.css
@@ -18,7 +18,7 @@ html {
 
 .logo {
   width: 50px;
-  grid-area: "logo";
+  grid-area: logo;
   padding: 15px;
   margin: 10px;
   background-color: none; /*Remove later*/
@@ -27,7 +27,7 @@ html {
   h1.title-name {
     width: 300px;
     margin: 15px 0px 0px 10px;
-    grid-area: "title1";
+    grid-area: title1;
     font-family: 'Love Ya Like A Sister', cursive;
     font-size: 52px;
   }
@@ -35,7 +35,7 @@ html {
   h1.title-type {
     width: 200px;
     margin: -10px 0px 15px 10px;
-    grid-area: "title2";
+    grid-area: title2;
     font-family: 'Kaushan Script', cursive;
     font-size: 46px;
     color: rgb(8, 106, 233)
