--- a/code/assets/css/homepage.css
+++ b/code/assets/css/homepage.css
@@ -61,6 +61,10 @@
   transition: all 0.5s ease;
 }
 
+.news-card:hover {
+  box-shadow: 0 8px 6px -6px black;
+}
+
 /* TABLET */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .news-card-cnt ul {
