--- a/code/style.css
+++ b/code/style.css
@@ -21,7 +21,7 @@ p {
 
 /*** Styling the header ***/
 
-header {
+.header {
   Background-color: white;
   color: darkslategrey;
   Display: flex;
@@ -59,7 +59,7 @@ header {
   border-radius: 20px;
 }
 
-header img {
+.header img {
   width: 200px;
 }
 
@@ -361,23 +361,16 @@ footer {
   }
 
   .news-container {
-    /* display: flex;  */
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
   }
-
-  /** When the screen gets bigger we don't want the image to be too big. By adding
-  .bigs-news a img {
-    width: 50%
-  } we give it a max size ***/
 
   .news {
     flex-direction: column;
     align-items: center;
     flex-basis: 20%;
     text-align: left;
-    /** add padding/margin?**/
   }
 
   .news a {
