--- a/code/style.css
+++ b/code/style.css
@@ -9,6 +9,8 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+/* HEADER */
+
 header {
   width: 90%;
   margin: auto;
@@ -62,7 +64,8 @@ nav {
   animation-duration: 5s;
   animation-iteration-count: infinite;
   }
-}
+
+  /* MAIN SECTION */
 
 .main-box {
   width: 90%;
@@ -71,6 +74,8 @@ nav {
   flex-direction: column;
   justify-content: center;
 }
+
+  /* BIG NEWS */
 
 .big-news {
   display: flex;
@@ -105,6 +110,8 @@ nav {
   object-fit: contain;
 }
 
+  /* NEWS GROUP */
+
 .news-group {
   display: flex;
   flex-direction: column;
@@ -136,6 +143,8 @@ nav {
   margin: 0;
   padding: 15px;
 }
+
+  /* INTERVIEW SECTION */
 
 .interview {
   position: relative;
@@ -171,10 +180,14 @@ nav {
   max-width: 100%;
 }
 
+  /* FOOTER */
+
 footer {
   margin: 10px;
   text-align: center;
 }
+
+  /* RESPONSIVE TABLET */
 
 @media (min-width:667px) and (max-width: 1024px) {
 
@@ -212,6 +225,8 @@ footer {
   }
 
 }
+
+  /* RESPONSIVE DESKTOP */
 
 @media (min-width: 1025px) {
 
