--- a/code/style.css
+++ b/code/style.css
@@ -7,6 +7,7 @@ html {
   margin: 0;
 }
 
+
 body {
   height: 100%;
   margin: 0;
@@ -168,6 +169,30 @@ img.small-news {
     display: none;
   }
 
+  section.big-news {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  figure.big-news {
+    width: 300px;
+    padding: 14px;
+    margin: 0 5px 0 0;
+  }
+
+  .figcaption {
+    font-size: 24px;
+  }
+
+  img.big-news {
+    width: 300px;
+  }
+
+  .article {
+    width: 400px;
+  }
   
 }
 
